--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Tu Nombre",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "pg": "^8.11.3",
