--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
